# c-vulkan-example

./: .gitignore  README.md  meson.build
src/: app.c  app.h  build.ninja  log.c  log.h  main.c  optional.c  optional.h  queue_family.c  queue_family.h  swap_chain_support.c  swap_chain_support.h  util.h  vec.c  vec.h
src/shaders/: blob.h  blobify.sh
src/v/: VVkCommandBuffer.c  VVkCommandBuffer.h  VVkDeviceQueueCreateInfo.c  VVkDeviceQueueCreateInfo.h  VVkExtensionProperties.c  VVkExtensionProperties.h  VVkFence.c  VVkFence.h  VVkFramebuffer.c  VVkFramebuffer.h  VVkImage.c  VVkImage.h  VVkImageView.c  VVkImageView.h  VVkLayerProperties.c  VVkLayerProperties.h  VVkPhysicalDevice.c  VVkPhysicalDevice.h  VVkPresentModeKHR.c  VVkPresentModeKHR.h  VVkQueueFamilyProperties.c  VVkQueueFamilyProperties.h  VVkSemaphore.c  VVkSemaphore.h  VVkSurfaceFormatKHR.c  VVkSurfaceFormatKHR.h  v.h  v.py
